--- a/_config.yml
+++ b/_config.yml
@@ -71,7 +71,7 @@ share-links-active:
 
 # How to display the link to the website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "anuditverma.github.io"
+url-pretty: "anudit.in"
 
 # --- Misc --- #
 
