--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ navbar-links:
   About Me: "aboutme"
   Projects:
     - GSoC'15: "https://www.google-melange.com/archive/gsoc/2015/orgs/civicrm/projects/anuditverma.html"
-  Resume: "resume/Anudit_Verma.pdf"
+  Resume: "https://goo.gl/bOiExG"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
