--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,7 @@ navbar-links:
   About Me: "aboutme"
   Projects:
     - GSoC'15: "https://www.google-melange.com/archive/gsoc/2015/orgs/civicrm/projects/anuditverma.html"
+    - TypeRacer: "https://github.com/anuditverma/appbase-typeracer"
   Resume: "https://goo.gl/bOiExG"
 
 # Image to show in the navigation bar - image must be a square (width = height)
