--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ navbar-links:
   Projects:
     - GSoC'15: "https://www.google-melange.com/archive/gsoc/2015/orgs/civicrm/projects/anuditverma.html"
     - TypeRacer: "https://github.com/anuditverma/appbase-typeracer"
-  Resume: "https://goo.gl/bOiExG"
+  Resume / CV: "resume/Anudit_Verma.pdf"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
