--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ title: Anudit Verma
 # use subtitle: to set the sub heading for that title(meta-title). NOTE: if(meta-title exists){subtilel visiblity = true}
 
 # Short description of your site
-description: Anudit Verma - Let me introduce you to my geek side !
+description: Let me introduce you to my geek side !
 
 # --- Navigation bar options --- #
 
