--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,8 @@ navbar-links:
     - A framework of smart homes connected devices using Internet of Things: "http://ieeexplore.ieee.org/document/7918794/"
   Projects:
     - GSoC'15: "https://github.com/anuditverma/org.civicrm.osdi"
-    - Airtel Suvidha: "https://www.hackerearth.com/sprints/airtel-hackathon/dashboard/8856444/submission/"
+    - Airtel Suvidha (Airtel WHack Hackathon): "https://www.hackerearth.com/sprints/airtel-hackathon/dashboard/8856444/submission/"
+    - Contract Reader Tool (EY Hackathon): "http://www.moneycontrol.com/news/technology/ey-hackathon-winners-develop-tax-compliance-solutions-with-automation-2439821.html"
     - Medical Ambience App: "https://github.com/anuditverma/MAA-Avaya-Hackathon"
     - TypeRacer: "https://github.com/anuditverma/appbase-typeracer"
   Resume / CV: "resume/Anudit_Verma.pdf"
