--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,7 @@ navbar-links:
   About Me: "aboutme"
   Publications:
     - A framework of smart homes connected devices using Internet of Things: "http://ieeexplore.ieee.org/document/7918794/"
+    - Google Scholar Profile: "https://scholar.google.co.in/citations?user=4p4smu0AAAAJ"
   Projects:
     - GSoC'15: "https://github.com/anuditverma/org.civicrm.osdi"
     - Airtel Suvidha (Airtel WHack Hackathon): "https://www.hackerearth.com/sprints/airtel-hackathon/dashboard/8856444/submission/"
@@ -36,7 +37,7 @@ navbar-links:
     - Medical Ambience App: "https://github.com/anuditverma/MAA-Avaya-Hackathon"
     - TypeRacer: "https://github.com/anuditverma/appbase-typeracer"
   Resume / CV: "resume/Anudit_Verma.pdf"
-  Tags: "tags"
+#  Tags: "tags"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
