--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,7 @@ description: Let me introduce you to my geek side!
 
 # List of links in the navigation bar
 navbar-links:
+  Books: "books"
   About Me: "aboutme"
   Publications:
     - A framework of smart homes connected devices using Internet of Things: "http://ieeexplore.ieee.org/document/7918794/"
