--- a/_config.yml
+++ b/_config.yml
@@ -37,6 +37,7 @@ navbar-links:
     - Contract Reader Tool (EY Hackathon): "http://www.moneycontrol.com/news/technology/ey-hackathon-winners-develop-tax-compliance-solutions-with-automation-2439821.html"
     - Medical Ambience App: "https://github.com/anuditverma/MAA-Avaya-Hackathon"
     - TypeRacer: "https://github.com/anuditverma/appbase-typeracer"
+  Resume / CV: "resume/Anudit_Verma.pdf"
 #  Tags: "tags"
 
 # Image to show in the navigation bar - image must be a square (width = height)
