--- a/_config.yml
+++ b/_config.yml
@@ -37,6 +37,7 @@ navbar-links:
     - Contract Reader Tool (EY Hackathon): "http://www.moneycontrol.com/news/technology/ey-hackathon-winners-develop-tax-compliance-solutions-with-automation-2439821.html"
     - Medical Ambience App: "https://github.com/anuditverma/MAA-Avaya-Hackathon"
     - TypeRacer: "https://github.com/anuditverma/appbase-typeracer"
+    - video.js Overlay Hyperlink: "https://www.npmjs.com/package/videojs-overlay-hyperlink"
   Resume / CV: "resume/Anudit_Verma.pdf"
 #  Tags: "tags"
 
