--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ navbar-links:
     - Medical Ambience App: "https://github.com/anuditverma/MAA-Avaya-Hackathon"
     - TypeRacer: "https://github.com/anuditverma/appbase-typeracer"
     - video.js Overlay Hyperlink: "https://www.npmjs.com/package/videojs-overlay-hyperlink"
-  Resume / CV: "resume/Anudit_Verma.pdf"
+  Resume: "resume/Anudit_Verma.pdf"
 #  Tags: "tags"
 
 # Image to show in the navigation bar - image must be a square (width = height)
