--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ navbar-links:
   Projects:
     - GSoC'15: "https://github.com/anuditverma/org.civicrm.osdi"
     - Airtel Suvidha (Airtel WHack Hackathon): "https://www.hackerearth.com/sprints/airtel-hackathon/dashboard/8856444/submission/"
-    - Contract Reader Tool (EY Hackathon): "http://www.moneycontrol.com/news/technology/ey-hackathon-winners-develop-tax-compliance-solutions-with-automation-2439821.html"
+    - Contract Reader Tool (EY Hackathon): "https://www.rlcf.ey.com/in/en/newsroom/news-releases/news-ey-annouces-winners-of-the-intelligent-automation-hackathon"
     - Medical Ambience App: "https://github.com/anuditverma/MAA-Avaya-Hackathon"
     - TypeRacer: "https://github.com/anuditverma/appbase-typeracer"
     - video.js Overlay Hyperlink: "https://www.npmjs.com/package/videojs-overlay-hyperlink"
