Added: ResearchGate Profile

--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,7 @@ navbar-links:
   Publications:
     - A framework of smart homes connected devices using Internet of Things: "http://ieeexplore.ieee.org/document/7918794/"
     - Google Scholar Profile: "https://scholar.google.co.in/citations?user=4p4smu0AAAAJ"
+    - ResearchGate Profile: "https://www.researchgate.net/profile/Anudit_Verma"
   Projects:
     - GSoC'15: "https://github.com/anuditverma/org.civicrm.osdi"
     - Airtel Suvidha (Airtel WHack Hackathon): "https://www.linkedin.com/feed/update/activity:6273369896978087936/"
