--- a/_config.yml
+++ b/_config.yml
@@ -72,7 +72,7 @@ author:
   facebook: anuditverma
   github: anuditverma
   twitter: anuditverma
-  google-plus: +AnuditVerma
+# google-plus: +AnuditVerma
   linkedin: anuditverma
   stackoverflow: 4590331/anudit-verma
   instagram: anuditverma
