--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ navbar-links:
     - TypeRacer: "https://github.com/anuditverma/appbase-typeracer"
     - video.js Overlay Hyperlink: "https://www.npmjs.com/package/videojs-overlay-hyperlink"
   About Me: "aboutme"
-  Resume: "resume/Anudit_Verma.pdf"
+  Resume | CV: "resume/Anudit_Verma.pdf"
 #  Tags: "tags"
 
 # Image to show in the navigation bar - image must be a square (width = height)
