--- a/_config.yml
+++ b/_config.yml
@@ -1,20 +1,20 @@
 # --- General options --- #
 
 # Name of website
-title: Anudit Verma
+title: Nimesh Babu Oli
 
 # Short description of your site
-description: Let me introduce you to my geek side!
+description: Member at Nepal Council of World Affairs
 
 # Your name to show in the footer
-author: Anudit Verma
+author: Nimesh Babu Oli
 
 # --- Local development options ---
 # If your website is hosted locally rather than on GitHub, then you need to uncomment the next two parameters to set the url and baseurl
 # *** If you're not sure what this mean, then leave this section as it is. Only modify the url and baseurl if you know what you're doing!***
 
 # url is the the website domain URL without a trailing slash
-url: "https://www.anudit.in/"
+url: "https://www.nimeshbabuoli.com.np/"
 
 # baseurl should be an empty string
 baseurl: ""
@@ -29,36 +29,32 @@ baseurl: ""
 # List of links in the navigation bar
 navbar-links:
   Recommends: "books"
-  Publications:
-    - A framework of smart homes connected devices using Internet of Things: "http://ieeexplore.ieee.org/document/7918794/"
-    - Google Scholar Profile: "https://scholar.google.co.in/citations?user=4p4smu0AAAAJ"
-    - ResearchGate Profile: "https://www.researchgate.net/profile/Anudit_Verma"
-  Projects:
-    - GSoC'15: "https://github.com/anuditverma/org.civicrm.osdi"
-    - Airtel Suvidha (Airtel WHack Hackathon): "https://www.linkedin.com/feed/update/activity:6273369896978087936/"
-    - Contract Reader Tool (EY Hackathon): "https://www.moneycontrol.com/news/technology/ey-hackathon-winners-develop-tax-compliance-solutions-with-automation-2439821.html"
-    - Medical Ambience App: "https://github.com/anuditverma/MAA-Avaya-Hackathon"
-    - TypeRacer: "https://github.com/anuditverma/appbase-typeracer"
-    - video.js Overlay Hyperlink: "https://www.npmjs.com/package/videojs-overlay-hyperlink"
-  About Me: "aboutme"
-  Resume | CV: "resume/Anudit_Verma.pdf"
+  Research: "research"  
+  Activities:
+    - Travel: "travelling"
+    - Model UN: "modelun"
+    - Social Engagement: "socialengagement"
+  Personal:
+    - Opinions: "opinions"
+    - Blogs: "blogs"
+  About/Contact: "aboutme"
 #  Tags: "tags"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
-avatar: "/assets/img/av.jpg"
+avatar: "/assets/img/nimesh.jpg"
 round-avatar: true
 
 # If you want to have an image logo in the top-left corner instead of the title text,
 # then specify the following parameter. The logo will have a height of 40px
-# title-img: /path/to/image
+# title-img: "/assets/img/nimesh.jpg"
 
 # --- Background colour/image options --- #
 
 # By default, the navigation bar and footer have a light gray background, and the main page
 # has a white background. You can specify a different background colour or a background image
 # for the navigation bar, the main page, and the footer.
-# navbar-col: "orange"
+# navbar-col: "blue"
 # navbar-img: "/assets/img/bgimage.png"
 # footer-col: "blue"
 # footer-img: "/assets/img/bgimage.png"
@@ -71,16 +67,16 @@ round-avatar: true
 # Uncomment the links you want to show and add your information to each one.
 # If you don't want to show a link to an RSS feed, set rss to "false".
 social-network-links:
-# email: "someone@example.com"
-  facebook: anuditverma
-  github: anuditverma
-  twitter: anuditverma
+  email: "nimeshbabuoli@gmail.com"
+  facebook: nimeshbabuoli
+  # github: nimeshbabuoli
+  twitter: nimeshbabuoli
 # reddit: yourname
-  linkedin: anuditverma
+  linkedin: nimeshbabuoli
 # xing: yourname
 # stackoverflow: 4590331/anudit-verma
 # snapchat: yourname
-  instagram: anuditverma
+  instagram: nimeshbabuoli
   rss: false
 # youtube: user/yourname
 # spotify: yourname
@@ -91,13 +87,15 @@ social-network-links:
 
 # Select which share links to show in posts
 share-links-active:
+  email: true
   twitter: true
   facebook: true
   linkedin: true
+  instagram: true
 
 # How to display the link to the website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "www.anudit.in"
+url-pretty: "www.nimeshbabuoli.com.np"
 
 # --- Web Statistics Section --- #
 
@@ -110,7 +108,7 @@ google_analytics: "UA-84991519-1"
 # --- Comments --- #
 
 # Fill in your Disqus shortname (NOT the userid) if you want to support Disqus comments
-disqus: "anuditverma"
+disqus: "nimeshbabuoli"
 
 # To use Facebook Comments, fill in a Facebook App ID
 # fb_comment_id: ""
@@ -134,7 +132,7 @@ date_format: "%B %-d, %Y"
 # --- Don't need to touch anything below here (but you can if you want) --- #
 
 # Output options (more information on Jekyll's site)
-timezone: "Asia/Kolkata"
+timezone: "America/Chicago"
 markdown: kramdown
 highlighter: rouge
 permalink: /:year-:month-:day-:title/
