--- a/_config.yml
+++ b/_config.yml
@@ -103,7 +103,7 @@ share-links-active:
 
 # How to display the link to the website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "www.anudit.in"
+url-pretty: "anudit.in"
 
 # --- Web Statistics Section --- #
 
