--- a/_config.yml
+++ b/_config.yml
@@ -1,32 +1,31 @@
-# --- General options --- #
+###########################################################
+### Welcome to Beautiful Jekyll!
+### This config file is meant for settings that affect your entire website. When you first
+### set up your website you should go through all these settings and edit them, but after
+### the initial set up you won't need to come back to this file often.
+###########################################################
+
+############################
+# --- Required options --- #
+############################
 
 # Name of website
 title: Anudit Verma
 
 # Short description of your site
-description: Let me introduce you to my geek side!
+share-title: Let me introduce you to my geek side!
+
+# Meta description for SEO purposes
+meta-description: Hi, I am Anudit Verma. I am a Full Stack Software Developer, Designer, Mentor, Open-Source Evangelist and Community Enabler living in Sunnyvale, California, US. I have a Master's Degree in Computer Science. I am a former GSoC Student and an MLH Top 50 Hacker of 2021. I love to write on my blog. I enjoy reading books. I love to run. In my past time, I am either listening to a podcast or playing video games.
+
 
 # Your name to show in the footer
 author: Anudit Verma
 
-# --- Local development options ---
-# If your website is hosted locally rather than on GitHub, then you need to uncomment the next two parameters to set the url and baseurl
-# *** If you're not sure what this mean, then leave this section as it is. Only modify the url and baseurl if you know what you're doing!***
+###############################################
+# --- List of links in the navigation bar --- #
+###############################################
 
-# url is the the website domain URL without a trailing slash
-url: "https://www.anudit.in/"
-
-# baseurl should be an empty string
-baseurl: ""
-
-#For my changes
-# use meta-title: for the center heading of the page.
-# use title: to set the <title> of the web page.
-# use subtitle: to set the sub heading for that title(meta-title). NOTE: if(meta-title exists){subtilel visiblity = true}
-
-# --- Navigation bar options --- #
-
-# List of links in the navigation bar
 navbar-links:
   Recommends: "books"
   Publications:
@@ -42,105 +41,233 @@ navbar-links:
     - video.js Overlay Hyperlink: "https://www.npmjs.com/package/videojs-overlay-hyperlink"
   About Me: "aboutme"
   Resume | CV: "resume/Anudit_Verma.pdf"
-#  Tags: "tags"
 
-# Image to show in the navigation bar - image must be a square (width = height)
+################
+# --- Logo --- #
+################
+
+# Image to show in the navigation bar - works best with a square image
 # Remove this parameter if you don't want an image in the navbar
 avatar: "/assets/img/av.jpg"
+
+# By default, the image is cut into a circle. You can disable this behaviour by setting 'round-avatar: false'
 round-avatar: true
 
-# If you want to have an image logo in the top-left corner instead of the title text,
-# then specify the following parameter. The logo will have a height of 40px
-# title-img: /path/to/image
+# If you want to have an image logo in the top-left corner instead of having the title of the website,
+# then specify the following parameter
+#title-img: /path/to/image
 
-# --- Background colour/image options --- #
 
-# By default, the navigation bar and footer have a light gray background, and the main page
-# has a white background. You can specify a different background colour or a background image
-# for the navigation bar, the main page, and the footer.
-# navbar-col: "orange"
-# navbar-img: "/assets/img/bgimage.png"
-# footer-col: "blue"
-# footer-img: "/assets/img/bgimage.png"
-# page-col: "#FF0000"
-# page-img: "/assets/img/bgimage.png"
-
-# --- Footer options --- #
+#####################################
+# --- Footer social media links --- #
+#####################################
 
 # Select the social network links that you want to show in the footer.
 # Uncomment the links you want to show and add your information to each one.
-# If you don't want to show a link to an RSS feed, set rss to "false".
 social-network-links:
-# email: "someone@example.com"
+#  email: "someone@example.com"
+  rss: false  # remove this line if you don't want to show an RSS link at the bottom
   facebook: anuditverma
   github: anuditverma
   twitter: anuditverma
-# reddit: yourname
+#  patreon: yourname
+#  youtube: c/@AnuditVerma
+#  medium: yourname
+#  reddit: yourname
   linkedin: anuditverma
-# xing: yourname
-# stackoverflow: 4590331/anudit-verma
-# snapchat: yourname
+#  xing: yourname
+#  stackoverflow: "4590331/anudit-verma"
+#  snapchat: anuditverma
   instagram: anuditverma
-  rss: false
-# youtube: user/yourname
-# spotify: yourname
-# telephone: +1-(000)-000-0000
-# steam: yourname
-# twitch: yourname
-# yelp: yourname
-# telegram: yourname
-# calendly: yourname
-# mastodon: instance.url/@username
-# ORCID: 0000-0002-1867-9344
-# google-scholar: citations?user=4p4smu0AAAAJ
+#  spotify: yourname
+#  telephone: +1234567890
+#  steam: anuditverma
+#  twitch: yourname
+#  yelp: yourname
+#  telegram: yourname
+#  calendly: yourname
+#  mastodon: instance.url/@username
+#  ORCID: your ORCID ID
+#  google-scholar: your google scholar
+#  discord: invite/invite_code or users/userid 
+#  kaggle: yourname
+#  hackerrank: yourname
 
-# Select which share links to show in posts
+# If you want your website to generate an RSS feed, provide a description
+# The URL for the feed will be https://<your_website>/feed.xml
+rss-description: Let me introduce you to my geek side!
+
+###########################
+# --- General options --- #
+###########################
+
+# Select which social network share links to show in posts
 share-links-active:
   twitter: true
   facebook: true
   linkedin: true
   vk: false
 
-# How to display the link to the website in the footer
+# How to display the link to your website in the footer
 # Remove this if you don't want a link in the footer
 url-pretty: "anudit.in"
 
-# --- Web Statistics Section --- #
+# Excerpt word length - Truncate the excerpt of each post on the feed page to the specified number of words
+excerpt_length: 50
 
-# Fill in your Google Analytics ID to track your website using GA
+# Whether or not to show an excerpt for every blog post in the feed page
+feed_show_excerpt: true
+
+# Whether or not to show a list of tags below each post preview in the feed page
+feed_show_tags: true
+
+# Add a search button to the navbar
+post_search: false
+
+# Add a button in the footer to edit the current page. Only works if your website is hosted on GitHub
+edit_page_button: false
+
+# Allow sub-menu items (second-level navigation menu items) to be longer than the top-level menu
+# If this setting is off, then long sub-menu words might get cut off
+# See https://github.com/daattali/beautiful-jekyll/issues/765 to understand the issue this setting can solve
+navbar-var-length: false
+
+# The keywords to associate with your website, for SEO purposes
+keywords: "anudit verma, geek, computer science, software engineer, mathematics, open source, google summer of code, gsoc, google developer student club, dsc, google dsc lead, raspberry pi, music, space, universe, internet of things, research, android, python, hackathons, mentor, masters, ms, graduate, csulb, cal state long beach, california state university long beach, california, bay area"
+
+######################################
+# --- Colours / background image --- #
+######################################
+
+# Personalize the colours in your website. Colour values can be any valid CSS colour
+
+navbar-col: "#EAEAEA"
+navbar-text-col: "#404040"
+navbar-border-col: "#DDDDDD"
+page-col: "#FFFFFF"
+text-col: "#404040"
+link-col: "#008AFF"
+hover-col: "#890000"
+footer-col: "#EAEAEA"
+footer-text-col: "#777777"
+footer-link-col: "#404040"
+footer-hover-col: "#890000"
+
+# Alternatively, the navbar, footer, and page background can be set to an image
+# instead of colour
+
+#navbar-img: "/assets/img/bgimage.png"
+#footer-img: "/assets/img/bgimage.png"
+#page-img: "/assets/img/bgimage.png"
+
+# Suggest a colour for mobile browsers to use as the browser's theme. This is only supported by a few mobile browsers.
+mobile-theme-col: "#a50509"
+
+# For any extra visual customization, you can include additional CSS files in every page on your site. List any custom CSS files here
+#site-css:
+#  - "/assets/css/custom-styles.css"
+
+# If you have common JavaScript files that should be included in every page, list them here
+#site-js:
+#  - "/assets/js/custom-script.js"
+
+#################################
+# --- Web Analytics Section --- #
+#################################
+
+# Fill in your Google Analytics gtag.js ID to track your website using gtag
+#gtag: ""
+
+# Fill in your Google Analytics ID to track your website using Google Analytics
 google_analytics: "UA-84991519-1"
+
+# Fill in your Cloudflare Analytics beacon token to track your website using Cloudflare Analytics
+#cloudflare_analytics: ""
 
 # Google Tag Manager ID
 #gtm: ""
 
-# --- Comments --- #
+# Matomo (aka Piwik) Web statistics
+# Uncomment the following section to enable Matomo. The opt-out parameter controls
+# whether or not you want to allow users to opt out of tracking.
+#matomo:
+#  site_id: "9"
+#  uri: "demo.wiki.pro"
+#  opt-out: true
 
-# Fill in your Disqus shortname (NOT the userid) if you want to support Disqus comments
+####################
+# --- Comments --- #
+####################
+
+# To use Disqus comments, sign up to https://disqus.com and fill in your Disqus shortname (NOT the userid)
 disqus: "anuditverma"
 
-# To use Facebook Comments, fill in a Facebook App ID
-# fb_comment_id: ""
+# To use Facebook Comments, create a Facebook app and fill in the Facebook App ID
+#fb_comment_id: ""
 
+# To use CommentBox, sign up for a Project ID on https://commentbox.io
+#commentbox: "" # Project ID, e.g. "5694267682979840-proj"
+
+# To use Utterances comments: (0) uncomment the following section, (1) fill in
+# "repository" (make sure the repository is public), (2) Enable Issues in your repository,
+# (3) Install the Utterances app in your repository https://github.com/apps/utterances
+# See more details about the parameters below at https://utteranc.es/
+#utterances:
+#  repository: # GitHub username/repository eg. "daattali/beautiful-jekyll"
+#  issue-term: title   # Mapping between blog posts and GitHub issues
+#  theme: github-light # Utterances theme
+#  label: blog-comments # Label that will be assigned to GitHub Issues created by Utterances
+
+# To use Staticman comments, uncomment the following section. You may leave the reCaptcha
+# section commented if you aren't using reCaptcha for spam protection. 
+# Using Staticman requires advanced knowledge, please consult 
+# https://github.com/eduardoboucas/staticman/ and https://staticman.net/ for further 
+# instructions. For any support with staticman please direct questions to staticman and 
+# not to BeautifulJekyll.
+#staticman:
+#  repository : # GitHub username/repository eg. "daattali/beautiful-jekyll"
+#  branch     : master # If you're not using `master` branch, then you also need to update the `branch` parameter in `staticman.yml`
+#  endpoint   : # URL of your deployment, with a trailing slash eg. "https://<your-api>/v3/entry/github/"
+#  reCaptcha:   # (optional, set these parameters in `staticman.yml` as well) 
+#    siteKey  : # You need to apply for a site key on Google
+#    secret   : # Encrypt your password by going to https://<your-own-api>/v3/encrypt/<your-site-secret>
+
+# To use giscus comments:
+# (0) Uncomment the following giscus section, (1) Enable Discussions in your GitHub repository, 
+# (2) Install the giscus app in your repository (details at https://giscus.app),
+# (3) Fill in *all* the parameters below 
+# See more details about giscus and each of the following parameters at https://giscus.app
+#giscus:
+#  hostname: giscus.app # Replace with your giscus instance's hostname if self-hosting
+#  repository: # GitHub username/repository eg. "daattali/beautiful-jekyll"
+#  repository-id: # ID of your repository, retrieve this info from https://giscus.app
+#  category: Announcements # Category name of your GitHub Discussion posts
+#  category-id: # ID of your category, retrieve this info from https://giscus.app
+#  mapping: pathname
+#  reactions-enabled: 1
+#  emit-metadata: 0
+#  theme: light
+
+################
 # --- Misc --- #
-
-# Facebook App ID
-# fb_app_id: ""
-
-# Excerpt Word Length
-# Truncates the excerpt to the specified number of words on the index page
-excerpt_length: 50
+################
 
 # Character used to separate site title and description in HTML document title
 # and RSS feed title
 title-separator: "-"
 
-# Ruby Date Format
+# Ruby Date Format to show dates of posts
 date_format: "%B %-d, %Y"
 
-# --- Don't need to touch anything below here (but you can if you want) --- #
+# Facebook App ID
+#fb_app_id: ""
+
+#################################################################################
+# --- You don't need to touch anything below here (but you can if you want) --- #
+#################################################################################
 
 # Output options (more information on Jekyll's site)
-timezone: "Asia/Kolkata"
+timezone: "America/Los_Angeles"
 markdown: kramdown
 highlighter: rouge
 permalink: /:year-:month-:day-:title/
@@ -162,63 +289,20 @@ defaults:
       readtime: true # add estimated reading time on all blog posts
   -
     scope:
-      path: "" # all files
+      path: "" # any file that's not a post will be a "page" layout by default
     values:
       layout: "page"
-      show-avatar: true
-
-# Use tags index page and make tags on each post clickable
-link-tags: true
 
 # Exclude these files from production site
 exclude:
   - CHANGELOG.md
   - CNAME
-  - Dockerfile
   - Gemfile
   - Gemfile.lock
   - LICENSE
   - README.md
-  - Vagrantfile
-
-#Meta data for your Posts
-metadata:
-  _posts:
-    - name: "layout"
-      field:
-        element: "hidden"
-        value: "post"
-    - name: "title"
-      field:
-        element: "text"
-        label: "Post title"
-        placeholder: "Title"
-        alterable: true
-    - name: "subtitle"
-      field:
-        element: "textarea"
-        label: "Subtitle"
-        placeholder: "A description of your post."
-        alterable: true
-    - name: "date"
-      field:
-        element: "text"
-        label: "Date"
-        help: "Enter date of post."
-        placeholder: "yyyy-mm-dd"
-        alterable: true
-    - name: "image"
-      field:
-        element: "text"
-        label: "Image"
-        help: "Add a thumbnail image to your post."
-        placeholder: "Thumbnail"
-        alterable: true
-    - name: "published"
-      field:
-        element: "checkbox"
-        label: "Publish"
-        help: "Check to publish post, uncheck to hide."
+  - screenshot.png
+  - docs/
 
 plugins:
   - jekyll-paginate
