--- a/_config.yml
+++ b/_config.yml
@@ -34,8 +34,8 @@ navbar-links:
     - ResearchGate Profile: "https://www.researchgate.net/profile/Anudit_Verma"
   Projects:
     - GSoC'15: "https://github.com/anuditverma/org.civicrm.osdi"
-    - Airtel Suvidha (Airtel WHack Hackathon): "https://www.linkedin.com/feed/update/activity:6273369896978087936/"
-    - Contract Reader Tool (EY Hackathon): "https://www.moneycontrol.com/news/technology/ey-hackathon-winners-develop-tax-compliance-solutions-with-automation-2439821.html"
+    - Airtel Suvidha - Airtel WHack Hackathon: "https://www.linkedin.com/feed/update/activity:6273369896978087936/"
+    - Contract Reader Tool - EY Hackathon: "https://www.moneycontrol.com/news/technology/ey-hackathon-winners-develop-tax-compliance-solutions-with-automation-2439821.html"
     - Medical Ambience App: "https://github.com/anuditverma/MAA-Avaya-Hackathon"
     - TypeRacer: "https://github.com/anuditverma/appbase-typeracer"
     - video.js Overlay Hyperlink: "https://www.npmjs.com/package/videojs-overlay-hyperlink"
