--- a/_config.yml
+++ b/_config.yml
@@ -26,18 +26,31 @@ author: Anudit Verma
 # --- List of links in the navigation bar --- #
 ###############################################
 
+# navbar-links:
+#   Recommends: "books"
+#   Publications:
+#     - A framework of smart homes connected devices using Internet of Things: "http://ieeexplore.ieee.org/document/7918794/"
+#     - Google Scholar Profile: "https://scholar.google.co.in/citations?user=4p4smu0AAAAJ"
+#     - ResearchGate Profile: "https://www.researchgate.net/profile/Anudit_Verma"
+#   Projects:
+#     - GSoC'15: "https://github.com/anuditverma/org.civicrm.osdi"
+#     - Airtel Suvidha - Airtel WHack Hackathon: "https://www.linkedin.com/feed/update/activity:6273369896978087936/"
+#     - Contract Reader Tool - EY Hackathon: "https://www.moneycontrol.com/news/technology/ey-hackathon-winners-develop-tax-compliance-solutions-with-automation-2439821.html"
+#     - Medical Ambience App: "https://github.com/anuditverma/MAA-Avaya-Hackathon"
+#     - TypeRacer: "https://github.com/anuditverma/appbase-typeracer"
+#     - video.js Overlay Hyperlink: "https://www.npmjs.com/package/videojs-overlay-hyperlink"
+#   About Me: "aboutme"
+#   Resume | CV: "resume/Anudit_Verma.pdf"
+
+
 navbar-links:
   Recommends: "books"
-  Publications:
+  My Work:
     - A framework of smart homes connected devices using Internet of Things: "http://ieeexplore.ieee.org/document/7918794/"
     - Google Scholar Profile: "https://scholar.google.co.in/citations?user=4p4smu0AAAAJ"
-    - ResearchGate Profile: "https://www.researchgate.net/profile/Anudit_Verma"
-  Projects:
-    - GSoC'15: "https://github.com/anuditverma/org.civicrm.osdi"
+    - Google Summer of Code: "https://github.com/anuditverma/org.civicrm.osdi"
     - Airtel Suvidha - Airtel WHack Hackathon: "https://www.linkedin.com/feed/update/activity:6273369896978087936/"
     - Contract Reader Tool - EY Hackathon: "https://www.moneycontrol.com/news/technology/ey-hackathon-winners-develop-tax-compliance-solutions-with-automation-2439821.html"
-    - Medical Ambience App: "https://github.com/anuditverma/MAA-Avaya-Hackathon"
-    - TypeRacer: "https://github.com/anuditverma/appbase-typeracer"
     - video.js Overlay Hyperlink: "https://www.npmjs.com/package/videojs-overlay-hyperlink"
   About Me: "aboutme"
   Resume | CV: "resume/Anudit_Verma.pdf"
