Minor Update: Added Whatsapp to social network

--- a/_config.yml
+++ b/_config.yml
@@ -85,6 +85,7 @@ social-network-links:
   twitter: anuditverma
 #  patreon: yourname
 #  youtube: c/@AnuditVerma
+#  whatsapp: 0123456789
 #  medium: yourname
 #  reddit: yourname
   linkedin: anuditverma
