Site Upgrade: updated meta-description for SEO

--- a/_config.yml
+++ b/_config.yml
@@ -16,8 +16,7 @@ title: Anudit Verma
 share-title: Let me introduce you to my geek side!
 
 # Meta description for SEO purposes
-meta-description: Hi, I am Anudit Verma. I am a Full Stack Software Developer, Designer, Mentor, Open-Source Evangelist and Community Enabler living in Sunnyvale, California, US. I have a Master's Degree in Computer Science. I am a former GSoC Student and an MLH Top 50 Hacker of 2021. I love to write on my blog. I enjoy reading books. I love to run. In my past time, I am either listening to a podcast or playing video games.
-
+meta-description: Hi, I'm Anudit Verma, a Full Stack Software Developer, UI/UX Designer, and Open-Source Evangelist based in the Bay Area, California. I hold a Master's degree in Computer Science and have had the privilege of being a Google Summer of Code (GSoC) student and one of Major League Hacking (MLH) Top 50 Hackers of 2021.
 
 # Your name to show in the footer
 author: Anudit Verma
